--- a/Covid (O).ipynb
+++ b/Covid (O).ipynb
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1979,18 +1979,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.00      0.00      0.00         2\n",
-      "         1.0       0.90      1.00      0.95        19\n",
+      "         0.0       0.50      0.77      0.61        13\n",
+      "         1.0       0.67      0.38      0.48        16\n",
       "\n",
-      "    accuracy                           0.90        21\n",
-      "   macro avg       0.45      0.50      0.48        21\n",
-      "weighted avg       0.82      0.90      0.86        21\n",
+      "    accuracy                           0.55        29\n",
+      "   macro avg       0.58      0.57      0.54        29\n",
+      "weighted avg       0.59      0.55      0.54        29\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "r = classification_report(y_test,predictions)\n",
+    "r = classification_report(y_test_1,predictions_1)\n",
     "print(r)"
    ]
   },
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
     }
    ],
    "source": [
-    "print(logmodel.predict(([[1,80,1,1,1,97.66666667,38.6,0,0]])))"
+    "print(logmodel.predict(([[0,55,1,1,1,97.66666667,38.6,0,0]])))"
    ]
   },
   {
